# terminal_cli.rs

./: Cargo.toml  README.md  index.html  search-index.js
cli_core/: Cargo.toml
cli_core/src/: autocomplete.rs  cli.rs  cli_command.rs  cli_property.rs  i18n.rs  keys_terminal.rs  lib.rs  prompt_buffer.rs  property.rs  terminal.rs  tests.rs  utils.rs
cli_core/src/prelude/: no_std.rs  std.rs
cli_termion/: Cargo.toml
cli_termion/examples/: prompt.rs
cli_termion/src/: lib.rs
examples/: prompt_mio_telnet_server.rs  prompt_telnet_server.rs  prompt_termion.rs  prompt_termios.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/terminal_cli/: trait.CliCommand.js
src/: autocomplete.rs  cli.rs  cli_command.rs  cli_property.rs  commands.rs  keys.rs  keys_terminal.rs  lib.rs  prompt_buffer.rs  property.rs  terminal.rs  terminal_telnet.rs  terminal_termion.rs  terminal_termios.rs  tests.rs  utils.rs
src/prelude/: mod.rs  no_std.rs  std.rs
src/terminal_cli/: cli.rs.html  commands.rs.html  lib.rs.html  prompt_buffer.rs.html  utils.rs.html
terminal_cli/: enum.AutocompleteOption.html  enum.AutocompleteResult.html  fn.cli_execute.html  fn.cli_try_autocomplete.html  fn.format_in_columns.html  fn.longest_common_prefix.html  index.html  sidebar-items.js  stability.html  stability.json  struct.AutocompleteLine.html  struct.CliCommandKeyword.html  struct.CliPromptAutocompleteBuffer.html  struct.CliPropertyFn.html  struct.CliPropertyVar.html  trait.CliCommand.html  trait.CliPromptTerminal.html  trait.CliTerminal.html
terminal_cli/cli/: enum.AutocompleteOption.html  enum.AutocompleteResult.html  fn.cli_execute.html  fn.cli_try_autocomplete.html  sidebar-items.js  struct.AutocompleteLine.html  trait.CliCommand.html  trait.CliTerminal.html
terminal_cli/commands/: sidebar-items.js  struct.CliCommandKeyword.html  struct.CliPropertyFn.html  struct.CliPropertyVar.html
terminal_cli/prompt_buffer/: sidebar-items.js  struct.CliPromptAutocompleteBuffer.html  trait.CliPromptTerminal.html
terminal_cli/utils/: fn.format_in_columns.html  fn.longest_common_prefix.html  sidebar-items.js
terminal_crossterm/: Cargo.toml
terminal_crossterm/examples/: prompt.rs
terminal_crossterm/src/: lib.rs
terminal_termion/: Cargo.toml
terminal_termion/examples/: prompt.rs
terminal_termion/src/: lib.rs
