[package]
name = "terminal-cli"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = [ "Rudi Benkovic <rudi.benkovic@gmail.com>" ]
repository = "https://github.com/hashmismatch/terminal-cli"
homepage = "https://github.com/hashmismatch/terminal-cli"
description = """
Low-level, no-std library for implementing terminal command line 
interfaces in embedded environments. With autocomplete support.
"""

[lib]
name="terminal-cli"
path="src/lib.rs"