[package]
name = "terminal_cli"
version = "0.1.1"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = [ "Rudi Benkovic <rudi.benkovic@gmail.com>" ]
repository = "https://github.com/hashmismatch/terminal_cli.rs"
homepage = "https://github.com/hashmismatch/terminal_cli.rs"
documentation = "http://hashmismatch.github.io/terminal_cli.rs/"
description = """
Low-level, no-std library for implementing terminal command line 
interfaces in embedded environments. With autocomplete support and
a receiving buffer for a prompt interface.
"""
